[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pyflakes
    "F",     # pycodestyle
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "PL",    # pylint
    "UP",    # pyupgrade
    "INP",   # check missing __init__.py
    "B006",  # mutable-argument-default
]
extend-ignore = [
    # D100-D106: Ignore undocumented module, class, method, function, inner class.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106",
]
fixable = ["I", "D", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
name = "streamlit-blackout-stats"
version = "0.2.0"
description = "Streamlit app for visualizing power outage statistics. Uses Google Sheets as the data source."
authors = ["Yuriy Guts <yuriy.guts@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
bokeh = "^3.4.1"
shillelagh = {extras = ["gsheetsapi"], version = "^1.2.19"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.5"
mypy = "^1.10.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
